--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -125,6 +125,21 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+.my-picture-container {
+    width: 90px;
+    height: 90px;
+    margin-bottom: 30px;
+    
+}
+
+.my-picture-container img {
+    height: 90px;
+    width: auto;
+    border-radius: 50%;
+    
 }
 
 .blurb {
@@ -140,7 +155,13 @@ html {
 .portfolio-project-container {
     // height: 100vh;
     background-color: RGBA(246, 246, 246, 1.00);
-    
+    padding-top: 10px;
+    padding-bottom: 40px;
+}
+
+.portfolio-project-container--add-t-padding {
+    padding-top: 45px;
+    margin-top: 45px;
 }
 
 .project-image-container {
@@ -148,7 +169,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 20px;
+    // padding-top: 20px;
     overflow: hidden;
 }
 
@@ -171,6 +192,12 @@ html {
     
     // font-family: 'Average Sans', sans-serif;
     // font-family: 'Fjalla One', sans-serif;
+}
+
+.box-shadow-top {
+    -webkit-box-shadow: 2px -2px 9px -4px rgba(0,0,0,0.25);
+    -moz-box-shadow: 2px -2px 9px -4px rgba(0,0,0,0.25);
+    box-shadow: 2px -2px 9px -4px rgba(0,0,0,0.25);
 }
 
 .project-description {
@@ -202,7 +229,7 @@ html {
     margin-top: 20px;
     background-color: RGBA(221, 221, 221, 1.00);
     height: 42px;
-    width: 135px;
+    width: 150px;
     vertical-align: center;
     line-height: 42px;
     margin-left: auto;
@@ -236,6 +263,8 @@ a {
     font-family: 'Average', serif;
     line-height: 29px;
     text-align: left;
+    box-shadow: 0 4px 5px -2px RGBA(117, 117, 117, .3);
+    
 }
 
 .card {
@@ -244,9 +273,149 @@ a {
 
 .card-header {
     border: none;
+    padding-bottom: 0;
+    
 }
 
 .collapse-container {
-    margin-top: -14px;
+    // margin-top: -14px;
     z-index: 8;
+}
+
+.item i {
+    display: inline-block;
+    padding-left: 10px;
+    font-size: 13px;
+    position: relative;
+    top: -3px;
+}
+
+.add-b-margin {
+    margin-bottom: 30px;
+}
+
+.about-section {
+    // background-color: RGBA(74, 74, 74, 1.00);
+    background-color: black;
+    height: 130vh;
+    -webkit-box-shadow: 2px -2px 9px 1px rgba(0,0,0,0.25);
+    -moz-box-shadow: 2px -2px 9px 1px rgba(0,0,0,0.25);
+    box-shadow: 2px -2px 9px 1px rgba(0,0,0,0.25);
+    overflow: hidden;
+    
+}
+
+.about-image-container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(180deg,RGBA(255, 255, 255, .3), 20%, black), url("../images/wall-white-black-abstract-66905_scaledDown.jpeg");
+    
+}
+
+.about-image-container img {
+    height: 100%;
+    width: auto;
+    opacity: .3;
+    
+}
+
+.about-section__text-container {
+    color: white;
+    // height: 50%;
+    // position: relative;
+    // z-index: 99;
+    // top: 0;
+    font-family: 'Average', serif;
+    line-height: 35px;
+    padding: 0 40px;
+}
+
+.about-section__text-container strong {
+    font-weight: 900;
+    font-size: 20px;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */  
+    border: 1px solid #ccc; /* Gray border */
+    // border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    font-family: 'Average', serif;
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    // border-radius: 4px;
+    cursor: pointer;
+    font-family: 'Fjalla One', sans-serif;
+}
+
+.contact-form-container {
+    background-color: black;
+}
+
+.contact-form-container form {
+    margin-top: 10px;
+}
+
+.contact-form-container form input {
+    background-color: RGBA(247, 247, 247, 1.00);
+}
+
+.contact-form-container form textarea {
+    background-color: RGBA(247, 247, 247, 1.00);
+}
+
+.contact-form-text {
+    font-family: 'Average', serif;
+    color: white;
+    
+}
+
+.contact-form-header {
+    color: white;
+    font-family: 'Fjalla One', sans-serif;
+    display: block;
+    // padding: 50px 0;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.contact-form-bar {
+    width: 100px;
+    height: 4px;
+    background-color: white;
+    display: block;
+    margin-bottom: 30px;
+}
+
+.contact-header-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+
+}
+
+.submit-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 30px;
+    
+}
+
+.submit-wrapper input {
+    color: black;
 }
