--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -21,6 +21,19 @@ html {
   background-size: cover;
   background-position: 50% 50%;
   z-index: 0;
+
+}
+
+#particles-overlay-js {
+      position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  z-index: 0;
 }
 
 .overlay-text-wrapper {
@@ -44,6 +57,7 @@ html {
 .overlay-text {
     position: absolute;
     right: 20px;
+    // text-shadow: 22px 22px 22px black;
 }
 
 .overlay-with-gradient {
@@ -399,6 +413,9 @@ html {
     font-size: 26px;
     line-height: 24px;
     padding: 30px 0;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
