--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -14,6 +14,7 @@ html {
     // font-family: 'Fjalla One', sans-serif;
 }
 
+
 #particles-js {
   position: absolute;
   width: 100vw;
@@ -55,14 +56,15 @@ html {
   pointer-events: none;
   z-index: 0;
   text-align: right;
-  mix-blend-mode: hard-light;
-  pointer-events: none;
+//   mix-blend-mode: hard-light;
+//   pointer-events: none;
 }
 
 .overlay-text {
     position: absolute;
     right: 20px;
     // text-shadow: 22px 22px 22px black;
+    
 }
 
 .overlay-with-gradient {
@@ -492,6 +494,11 @@ a {
 
 .link--white {
     color: white;
+}
+
+#latestWorkSpan {
+    position: relative;
+    overflow: hidden;
 }
 
 .card {
