--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -88,18 +88,7 @@ table {
 
 }
 
-// #particles-2 {
-//     position: absolute;
-//   width: 100vw;
-//   height: 100vh;
-//   background-color: black;
-//   background-image: url("");
-//   background-repeat: no-repeat;
-//   background-size: cover;
-//   background-position: 50% 50%;
-//   z-index: 0;
-  
-// }
+
 
 #particles-overlay-js {
   position: absolute;
@@ -136,7 +125,7 @@ table {
 .overlay-text {
     position: absolute;
     right: 20px;
-    
+    // color: blue;
     letter-spacing: 3px;
     // margin-top: 500px;
 }
